Add github actions ci/cd yaml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,6 @@ jobs:
         run: |
           pwd          
           cd terraform-exec
-          bash terraform_test_exec.sh       
+          bash terraform_exec.sh       
       
 
