--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
   pull_request:         
-  workflow_dispatch:
+  # workflow_dispatch:
  # The type of permissions needed for OIDC authentication
 permissions:
   id-token: write
