--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,16 @@
 name: "Terraform Deployment"
-env:
-  ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
-  ARM_CLIENT_SECRET: ${{ secrets.ARM_AD_CLIENT_SECRET }}
-  ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+# env:
+#   ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
+#   ARM_CLIENT_SECRET: ${{ secrets.ARM_AD_CLIENT_SECRET }}
+#   ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
+#   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 on:
   push:
     branches:
       - main
-  pull_request:         
+  pull_request:     
+    branches:
+    - main    
   workflow_dispatch:
  # The type of permissions needed for OIDC authentication
 permissions:
@@ -18,11 +20,11 @@ permissions:
 
 # The credentials needed for terraform to properly authenticate with azure environment (OIDC authentication)
 # This generated using service principle
-# env:
-#   ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
-#   ARM_CLIENT_SECRET: ${{ secrets.ARM_AD_CLIENT_SECRET }}
-#   ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
-#   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+env:
+  ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_AD_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
+  ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 
 jobs:
   terraformApply:
@@ -38,12 +40,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@master
 
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }       
+      # - name: Azure Login
+      #   uses: azure/login@v1
+      #   with:
+      #     client-id: ${{ secrets.ARM_CLIENT_ID }}
+      #     tenant-id: ${{ secrets.ARM_TENANT_ID }}
+      #     subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }       
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
