--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,4 @@
 name: "Terraform Deployment"
-# env:
-#   ARM_CLIENT_ID: "${{ secrets.ARM_CLIENT_ID }}"
-#   ARM_CLIENT_SECRET: ${{ secrets.ARM_AD_CLIENT_SECRET }}
-#   ARM_SUBSCRIPTION_ID: "${{ secrets.ARM_SUBSCRIPTION_ID }}"
-#   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 on:
   push:
     branches:
@@ -54,7 +49,7 @@ jobs:
         
       - name: Run Terraform apply
         env:             
-          TERRAFORM_COMMAND: apply
+          TERRAFORM_COMMAND: destroy
         run: |
           pwd                    
           bash terraform_exec.sh       
