--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:     
     branches:
-    - main    
+    - feature/*    
   workflow_dispatch:
  # The type of permissions needed for OIDC authentication
 permissions:
@@ -23,8 +23,8 @@ env:
   ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 
 jobs:
-  terraformApply:
-    name: "Terraform Apply"
+  terraform-plan:
+    name: "Terraform Plan"
     runs-on: ubuntu-latest
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
@@ -49,9 +49,47 @@ jobs:
         with:
           terraform_version: 1.2.6
         
+      - name: Run Terraform apply        
+        run: |
+          pwd                    
+          terraform plan -input=false
+
+
+  terraform-apply:
+    name: "Terraform Apply"
+    runs-on: ubuntu-latest
+    needs: [terraform-plan]
+    if: github.event_name != 'pull_request' # run only when it is not PR
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:    
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.APP_ID }}  # Github App APP_ID
+          private_key: ${{ secrets.APP_PRIVATE_KEY }} # Create a Github App and generate App Private Key
+      - name: Wait for approval
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ steps.generate_token.outputs.token }}
+          approvers: ndchris  # You can replace this with teams that you want to approve this.
+          minimum-approvals: 1
+
+      - name: Checkout Repository
+        uses: actions/checkout@master   
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.2.6
+        
       - name: Run Terraform apply
         env:             
-          TERRAFORM_COMMAND: destroy
+          TERRAFORM_COMMAND: apply
         run: |
           pwd                    
           bash terraform_exec.sh       
