--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,12 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: 1.2.6
+
+      - name: Terraform Init
+        run: |
+          terraform init
         
-      - name: Run Terraform apply        
+      - name: Run Terraform Plan        
         run: |
           pwd                    
           terraform plan -input=false
