--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
         
       - name: Run Terraform apply
         env:             
-          TERRAFORM_COMMAND: apply
+          TERRAFORM_COMMAND: destroy
         run: |
           pwd                    
           bash terraform_exec.sh       
