Added a multiple steps in CI/CD pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       # - feature/* 
   pull_request:     
     branches:
-    - - feature/*    
+    - feature/*    
   workflow_dispatch:
  # The type of permissions needed for OIDC authentication
 permissions:
